# ArgentaIA

./: README.md  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/recomendaciones/: page.tsx
backend/: Makefile  README.md  env.example  main.py  migration_plan.md  pyproject.toml  requirements.txt  run.py  setup_api_keys.py
backend/config/: __init__.py  logging_config.py  settings.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  fundamental_analysis.py  macro_analysis.py  recommendation_engine.py  sentiment_analysis.py  technical_analysis.py
components/: theme-toggle.tsx
lib/: api.ts  config.ts
